# docs/swagger.json
@@ -648,6 +648,9 @@
         "main.UserWithToken": {
             "type": "object",
             "properties": {
+                "Role": {
+                    "$ref": "#/definitions/store.Role"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -659,6 +662,9 @@
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "token": {
                     "type": "string"
@@ -773,9 +779,29 @@
                 }
             }
         },
+        "store.Role": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "store.User": {
             "type": "object",
             "properties": {
+                "Role": {
+                    "$ref": "#/definitions/store.Role"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -787,6 +813,9 @@
                 },
                 "is_active": {
                     "type": "boolean"
+                },
+                "role_id": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
